src/test/deca/syntax/invalid/notprovided/float.deca
{
	println(1.5.2);
}